[package]
name = "umode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_model = { path = "../data-model" }
der = { version = "0.6.0", features = ["derive", "flagset", "oid"] }
libuser = { path = "../libuser" }
u_mode_api = { path = "../u-mode-api" }
#rice = { git = "https://github.com/rivosinc/rice" }
rice = { path = "../../rice" }
const-oid = { version = "0.9.0", features = ["db"] }
sha2 = {version = "0.10", default-features = false }
generic-array = "0.14.5"